Deleted resizing script.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<!--<script src="js/jquery.scrollTo-1.4.3.1.min.js"></script>
 	<script src="js/jquery.scrollorama.js"></script>-->
 	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/jquery.scrolldeck.js"></script>
+	<!--<script src="js/jquery.scrolldeck.js"></script>-->
 	<!-- <script src="js/jquery.spritely-0.6.js"></script> -->
 	<script src="js/modernizr.js"></script>
 	<script>
@@ -53,12 +53,7 @@
 				});
 		}
 	</script>
-	<script>
-		$(window).resize(function() {
-    $('.slide').height($(window).height());
-		});
-		$(window).trigger('resize');
-	</script>
+
 	<script>
 		if (!Modernizr.svg) { 
 	    $("#me-icon").css("background-image", "url(images/me-icon.png)");
@@ -114,7 +109,7 @@
 			<!-- <div id="far-clouds" class=" far-clouds stage "></div>
 			<div id="near-clouds" class=" near-clouds stage "></div> -->
 				<center>
-				<div class="sixteen columns subtract-top">
+				<div class="sixteen columns">
 					<div class="row">
 						<div class="eleven columns">
 							<h2 class="align-left center-if-mobile big-text">In 2013...</h2>
