--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 	<!-- Scripts
 	================================================== -->
 	<script src="js/jquery-1.8.2.min.js"></script>
-	<!--<script src="js/jquery.scrollTo-1.4.3.1.min.js"></script>
-	<script src="js/jquery.scrollorama.js"></script>-->
+	<script src="js/jquery.scrollTo-1.4.3.1.min.js"></script>
+	<script src="js/jquery.scrollorama.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
-	<!--<script src="js/jquery.scrolldeck.js"></script>-->
-	<!-- <script src="js/jquery.spritely-0.6.js"></script> -->
+	<script src="js/jquery.scrolldeck.js"></script>
+	<script src="js/jquery.spritely-0.6.js"></script>
 	<script src="js/modernizr.js"></script>
 	<script>
 		if (!Modernizr.mq('only screen and (max-width: 767px)')) {
@@ -106,8 +106,8 @@
 				</center>
 			</div>
 			<div class="slide scrollblock" id="updates">
-			<!-- <div id="far-clouds" class=" far-clouds stage "></div>
-			<div id="near-clouds" class=" near-clouds stage "></div> -->
+			<div id="far-clouds" class=" far-clouds stage "></div>
+			<div id="near-clouds" class=" near-clouds stage "></div>
 				<center>
 				<div class="sixteen columns">
 					<div class="row">
