--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<script src="js/jquery.scrollTo-1.4.3.1.min.js"></script>
 	<script src="js/jquery.scrollorama.js"></script>
 	<script src="js/jquery.easing.1.3.js"></script>
-	<script src="js/jquery.scrolldeck.js"></script>
+	<!--<script src="js/jquery.scrolldeck.js"></script>-->
 	<script src="js/jquery.spritely-0.6.js"></script>
 	<script src="js/modernizr.js"></script>
 	<script>
@@ -77,9 +77,21 @@
 	    var h=document.getElementsByTagName("html")[0];h.className+=" wf-loading";var t=setTimeout(function(){h.className=h.className.replace(/(\s|^)wf-loading(\s|$)/g," ");h.className+=" wf-inactive"},config.scriptTimeout);var tk=document.createElement("script"),d=false;tk.src='//use.typekit.net/'+config.kitId+'.js';tk.type="text/javascript";tk.async="true";tk.onload=tk.onreadystatechange=function(){var a=this.readyState;if(d||a&&a!="complete"&&a!="loaded")return;d=true;clearTimeout(t);try{Typekit.load(config)}catch(b){}};var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(tk,s)
 	  })();
   	</script>
+  	<script> 
+  		function resizePages() {
+	var h = $(window).height();
+	var height  =  h < 600 ? 600 : h;
+	$('.slide').css('height',height);
+}
 
+	$(window).resize(function(e) {
+		resizePages();
+	});
+	resizePages();
+	</script>
 </head>
 <body>
+
 	<div class="container">
 		<div class="slide" id="fds">
 			<center>
