More resize script fixes.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 			<center>
 				<div class="sixteen columns">
 					<div class="row">
-						<div class="five columns animate-in" data-animation="fly-in-left"><img src="images/me-full.svg" width="auto" height="500px" class="add-bottom" id="me-full"></div>
+						<div class="five columns"><img src="images/me-full.svg" width="auto" height="500px" class="add-bottom" id="me-full"></div>
 						<div class="ten columns">
 							<h2 class="align-left center-if-mobile big-text">About</h2>
 							<p class="align-left">Michael Suen is a mediamaker and a troublemaker.</p>
@@ -137,7 +137,7 @@
 						<p class="align-left"><a href="http://web.mit.edu/ssuen/www/quiltbag/" target="_blank">Label Gear Solid</a>, a stealth game designed by Michael and his brother Stephen during the MIT Game Lab's 2014 QUILTBAG Jam, was featured on <a href="http://killscreendaily.com/articles/articles/feature/label-gear-solid-turns-stealth-game-lesson-queer-identity/" target="_blank"> Kill Screen</a>.</p>
 						<p class="align-left"><a href="https://dl.dropboxusercontent.com/u/12420957/Courtship%2520Web.html" target="_blank">Courtship</a>, an observational game designed by Michael and his friends during the 2014 Global Game Jam, was featured on <a href="https://www.youtube.com/watch?v=hMnd444ejYg" target="_blank">Northeastern University TV News</a>.</p>
 					</div>
-					<div class="five columns animate-in add-more-bottom" data-animation="fly-in-bottom"><img src="images/intheair.svg" width="100%"></div>
+					<div class="five columns"><img src="images/intheair.svg" width="100%"></div>
 				</div>
 			</div>
 			</center>
