Changed font to Verlag.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/skeleton.css">
 	<link rel="stylesheet" href="css/layout.css">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:300,700|Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="//cloud.typography.com/6754892/649804/css/fonts.css" />
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 	<!--[if lt IE 9]>
@@ -112,7 +112,7 @@
 			<center>
 				<div class="sixteen columns">
 					<div class="row">
-						<div class="five columns"><div id="walking"></div></div>
+						<div class="five columns"><div id="walking"></div><img src="images/me-walking.svg" id="walking-mobile" class="add-2x-bottom"></div>
 						<div class="ten columns">
 							
 							<p class="align-left">Michael Suen is an interactive producer, designer, and illustrator.</p>
