Fonts and heading

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
 </head>
 <body>
 	<div id="parallax">
+		<header>
+			<h1>Michael Suen</h1><h6>Designer. Illustrator. Writer.</h6>
+		</header>
 		<div class="parallax__layer parallax__layer__1">
 			<img src="images/bg8@2x.png">
 		</div>
@@ -116,24 +119,6 @@
 								</div>
 							</div>
 						</div>
-					</center>
-				</div>
-				<div class="slide scrollblock" id="updates">
-				<div id="far-clouds" class=" far-clouds stage "></div>
-				<div id="near-clouds" class=" near-clouds stage "></div>
-				<div id="nearer-clouds" class=" nearer-clouds stage "></div>
-					<center>
-					<div class="sixteen columns">
-						<div class="row">
-							<div class="eleven columns">
-								<h2 class="align-left center-if-mobile big-text">"What's up, man?"</h2>
-								<p class="align-left">Michael will be co-facilitating the closing discussion at Brown University's <a href="http://www.reframinghk.com/" target="_blank">Reframing Hong Kong conference</a> on March 15.</p>
-								<p class="align-left"><a href="http://web.mit.edu/ssuen/www/quiltbag/" target="_blank">Label Gear Solid</a>, a stealth game designed by Michael and his brother Stephen during the MIT Game Lab's 2014 QUILTBAG Jam, was featured on <a href="http://killscreendaily.com/articles/articles/feature/label-gear-solid-turns-stealth-game-lesson-queer-identity/" target="_blank"> Kill Screen</a>.</p>
-								<p class="align-left"><a href="https://dl.dropboxusercontent.com/u/12420957/Courtship%2520Web.html" target="_blank">Courtship</a>, an observational game designed by Michael and his friends during the 2014 Global Game Jam, was featured on <a href="https://www.youtube.com/watch?v=hMnd444ejYg" target="_blank">Northeastern University TV News</a>.</p>
-							</div>
-							<div class="five columns"><img src="images/intheair.svg" width="100%"></div>
-						</div>
-					</div>
 					</center>
 				</div>
 				<div class="slide" id="portfolio">
@@ -194,8 +179,6 @@
 	</div>
 <script>
 $(document).ready(function() {
-    $('#far-clouds').pan({fps: 60, speed: 0.2, dir: 'left'});
-    $('#near-clouds').pan({fps: 60, speed: 0.4, dir: 'left'});
     $('#walking').sprite({fps: 8, no_of_frames: 8});
 });
 </script>
