--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="css/layout.css">
 	<link rel="stylesheet" href="css/parallax.css">
 	<link rel="stylesheet" type="text/css" href="//cloud.typography.com/6754892/689804/css/fonts.css" />
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -117,7 +117,7 @@
 							</div>
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
-									<p class="align-left"><strong>I'm a creative guy.</strong> My <a href="#" class="workplay"><span>work</span></a> emphasizes user-friendly experiences that blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. I <a href="#" class="workplay"><span>work</span></a> with startups focused on social good to design web products, games, and brands that audiences will connect with.</p>
+									<p class="align-left"><strong>I'm a designer, illustrator, and writer.</strong> My <a href="#" class="workplay"><span>work</span></a> emphasizes user-friendly experiences that blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. I <a href="#" class="workplay"><span>work</span></a> with startups, small businesses, and creative entrepreneurs to build web products, games, and brands that audiences love to use. </p>
 									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in Wired, NPR, and Voice of America. In my former life, I helped produce award-winning games and game-based learning initiatives at the MIT spin-off &nbsp;<a href="http://www.learninggamesnetwork.org/">Learning Games Network</a>.</p>
 									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of L.A., raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">ice planet</a> of Vermont, I now live in Cambridge, MA with my PlayStation 3.</p>
 								</div>
@@ -131,7 +131,7 @@
 						</div>
 					</center>
 				</div>
-				<div class="slide" id="portfolio">
+				<!-- <div class="slide" id="portfolio">
 					<a href="/lgn/">
 						<div class="item" id="lgn">
 						</div>
@@ -164,10 +164,41 @@
 						<div class="item" id="twentyonecb">
 						</div>
 					</a>
+				</div> -->
+				<!--<div class="slide" id="testimonial">
+					<center>
+					<h4>What do people think of Michael Suen?</h4>
+					</center>
+					<div class="row">
+						<blockquote>"Michael is a very talented individual with an impressive combination of skill-sets. His role at Learning Games Network covered varied ground and helped transition our organisation from fledgling start-up to award-winning studio. He's a speedy yet proficient writer with the ability to hit exactly the right tone. He's technically savvy, able to plan, design and code a custom website against tight deadlines. And he has a great eye for design and art direction, visioneering slick promo videos, wireframing user interfaces, and designing logos and other marketing assets. Michael is both a big and quick thinker, who also gets things done. His passion for media is infectious, and his knowledge deep. He is a pleasure to work with, has a great sense of humour and a personality that brings out the best in others."
+					</div>
+				</div>
+				</div>-->
+				<div class="slide" id="social">
+					<div class="row">
+						<div class="five columns offset-by-three">
+							<h4 class="add-2x-bottom">First Contact</h4>
+							<div class="eight columns">
+								<a href="skype:m.suen?chat"><i class="fa fa-skype"></i> <span>Skype</span></a>
+								<a href="http://www.facebook.com/msuen"><i class="fa fa-facebook-official"></i> <span>Facebook</span></a>
+								<a href="http://www.instagram.com/poetichentai"><i class="fa fa-instagram"></i> <span>Instagram</span></a>
+								<a href="https://www.behance.net/msuen"><i class="fa fa-behance"></i> <span>Behance</span></a>
+							</div>
+							<div class="eight columns">
+								<a href="mailto:michael@suenlabs.com"><i class="fa fa-envelope"></i> <span>E-mail</span></a>
+								<a href="http://www.twitter.com/poetichentai"><i class="fa fa-twitter"></i> <span>Twitter</span></a>
+								<a href="http://www.linkedin.com/in/michaelsuen"><i class="fa fa-linkedin"></i> <span>LinkedIn</span></a>
+								<a href="http://www.medium.com/poetichentai"><i class="fa fa-medium"></i> <span>Medium</span></a>
+							</div>
+						</div>
+						<div class="four columns">
+							<h4>Tweets</h4>
+						</div>
+					</div>
 				</div>
 				<div class="slide" id="contact">
 					<center>
-					<h2 class="add-top">Get in touch!</h2>
+					<h2 class="add-top">Let me take care of your users, so that they take care of you.</h2>
 					<h3><a href="mailto:michael@suenlabs.com">michael at suenlabs dot com</a></h3>
 					<br><br>
 					<a href="http://www.facebook.com/msuen"><i class="icon-facebook-sign icon-4x"></i></a> <a href="http://www.twitter.com/poetichentai"><i class="icon-twitter-sign icon-4x"></i></a> <a href="http://www.instagram.com/poetichentai"><i class="icon-instagram icon-4x"></i></a> <a href="http://www.linkedin.com/in/michaelsuen"><i class="icon-linkedin-sign icon-4x last-icon"></i></a>
