Image not appearing

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 							</div>
 							<div class="row fourth-top">
 								<div class="eight columns offset-by-four alpha">
-									<a href="#contact" class="button"><div class="button"><div class="circle"><img src="/images/me-icon.svg" class="vertical-align"></div> <h5>Get your free consultation</h5></div></a>
+									<a href="#contact" class="button"><div class="button"><div class="circle"><img src="images/me-icon.svg" class="vertical-align"></div> <h5>Get your free consultation</h5></div></a>
 								<div class="four columns omega">
 								</div>
 							</div>
