--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 			<img src="images/bg1@2x.png">
 		</div>
 		<div class="parallax__cover">
-			<div class="container">
+			<div class="container" id="parallax-container">
+				<p class="notice"><em>Portfolio coming soon.</em></p>
 				<div class="slide group" id="about">
 					<center>
-						<p class="notice">Portfolio coming soon — stay tuned</p>
 						<div class="sixteen columns add-top">
 							<div class="row">
 								<div class="sixteen columns">
@@ -147,7 +147,6 @@
 					<div class="row">
 						<blockquote>"Michael is a very talented individual with an impressive combination of skill-sets. His role at Learning Games Network covered varied ground and helped transition our organisation from fledgling start-up to award-winning studio. He's a speedy yet proficient writer with the ability to hit exactly the right tone. He's technically savvy, able to plan, design and code a custom website against tight deadlines. And he has a great eye for design and art direction, visioneering slick promo videos, wireframing user interfaces, and designing logos and other marketing assets. Michael is both a big and quick thinker, who also gets things done. His passion for media is infectious, and his knowledge deep. He is a pleasure to work with, has a great sense of humour and a personality that brings out the best in others."
 					</div>
-				</div>
 				</div>-->
 				<div class="slide" id="social">
 					<div class="row vertical-align">
