Added sign up page

--- a/index.html
+++ b/index.html
@@ -150,31 +150,31 @@
 				</div>-->
 				<div class="slide" id="social">
 					<div class="row vertical-align">
-						<div class="ten columns offset-by-three">
+						<div class="twelve columns offset-by-three">
 							<h4 class="add-bottom">These Are A Few of My Favorite Things</h4>
 							<hr class="align-left">
 								<div class="favorite-things add-4x-bottom">
-									<div><i class="fa fa-rebel"></i> <span>Star Wars</span></div>
-									<div><i class="fa fa-road"></i> <span>Travel</span></div>
-									<div><i class="fa fa-gamepad"></i> <span>Games</span></div>
-									<div><i class="fa fa-beer"></i> <span>IPAs</span></div>
-									<div><i class="fa fa-tree"></i> <span>The Outdoors</span></div>
+									<div><i class="fa fa-rebel fa-fw"></i> <span>Star Wars</span></div>
+									<div><i class="fa fa-road fa-fw"></i> <span>Travel</span></div>
+									<div><i class="fa fa-gamepad fa-fw"></i> <span>Games</span></div>
+									<div><i class="fa fa-beer fa-fw"></i> <span>IPAs</span></div>
+									<div><i class="fa fa-tree fa-fw"></i> <span>The Outdoors</span></div>
 								</div>
 						</div>
 						<div class="five columns offset-by-three clearfix">
 							<h4 class="add-bottom">First Contact</h4>
 							<hr class="align-left">
 							<div class="eight columns social-icons">
-								<a href="skype:m.suen?chat"><i class="fa fa-skype"></i> <span>Skype</span></a>
-								<a href="http://www.facebook.com/msuen"><i class="fa fa-facebook-official"></i> <span>Facebook</span></a>
-								<a href="http://www.instagram.com/poetichentai"><i class="fa fa-instagram"></i> <span>Instagram</span></a>
-								<a href="http://www.linkedin.com/in/michaelsuen"><i class="fa fa-linkedin"></i> <span>LinkedIn</span></a>
+								<a href="skype:m.suen?chat"><i class="fa fa-skype fa-fw"></i> <span>Skype</span></a>
+								<a href="http://www.facebook.com/msuen"><i class="fa fa-facebook-official fa-fw"></i> <span>Facebook</span></a>
+								<a href="http://www.instagram.com/poetichentai"><i class="fa fa-instagram fa-fw"></i> <span>Instagram</span></a>
+								<a href="http://www.linkedin.com/in/michaelsuen"><i class="fa fa-linkedin fa-fw"></i> <span>LinkedIn</span></a>
 							</div>
 							<div class="eight columns social-icons">
-								<a href="mailto:michael@suenlabs.com"><i class="fa fa-envelope"></i> <span>E-mail</span></a>
-								<a href="http://www.twitter.com/poetichentai"><i class="fa fa-twitter"></i> <span>Twitter</span></a>
-								<a href="https://www.behance.net/msuen"><i class="fa fa-behance"></i> <span>Behance</span></a>
-								<a href="http://www.medium.com/poetichentai"><i class="fa fa-medium"></i> <span>Medium</span></a>
+								<a href="mailto:michael@suenlabs.com"><i class="fa fa-envelope fa-fw"></i> <span>E-mail</span></a>
+								<a href="http://www.twitter.com/poetichentai"><i class="fa fa-twitter fa-fw"></i> <span>Twitter</span></a>
+								<a href="https://www.behance.net/msuen"><i class="fa fa-behance fa-fw"></i> <span>Behance</span></a>
+								<a href="http://www.medium.com/poetichentai"><i class="fa fa-medium fa-fw"></i> <span>Medium</span></a>
 							</div>
 						</div>
 						<div class="five columns">
@@ -198,14 +198,43 @@
 					</div>
 				</div>
 				<div class="slide" id="contact">
-					<center>
-					<h2 class="add-top">Let me take care of your users, so that they take care of you.</h2>
-					<h3><a href="mailto:michael@suenlabs.com">michael at suenlabs dot com</a></h3>
-					<br><br>
-					<a href="http://www.facebook.com/msuen"><i class="icon-facebook-sign icon-4x"></i></a> <a href="http://www.twitter.com/poetichentai"><i class="icon-twitter-sign icon-4x"></i></a> <a href="http://www.instagram.com/poetichentai"><i class="icon-instagram icon-4x"></i></a> <a href="http://www.linkedin.com/in/michaelsuen"><i class="icon-linkedin-sign icon-4x last-icon"></i></a>
-					</center>
+					<div class="michael-photo">
+					</div>
+					<div class="michael-contact">
+						<div class="contact-top">
+							<blockquote class="vertical-align">
+								<p>"Michael is both a big and quick thinker, who also gets things done. His passion for media is infectious, and his knowledge deep...Michael helped transition our organisation from fledgling start-up to award-winning studio."</p>
+								<cite>Peter Stidwill, Learning Games Network</cite>
+								</blockquote>
+						</div>
+						<div class="contact-bottom">
+							<div class="vertical-align">
+								<p><strong>Want to hire me?</strong> I'm currently booked solid until March 2015, after which one slot will open up — though not for long! Let's start a conversation.</p>
+								<!-- Begin MailChimp Signup Form -->
+								<div id="mc_embed_signup">
+								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+								    <div id="mc_embed_signup_scroll">
+								<div class="mc-field-group">
+									<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
+								</div>
+								<div class="mc-field-group">
+									<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-mail">
+								</div>
+									<div id="mce-responses" class="clear">
+										<div class="response" id="mce-error-response" style="display:none"></div>
+										<div class="response" id="mce-success-response" style="display:none"></div>
+									</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+								    <div style="position: absolute; left: -5000px;"><input type="text" name="b_4ece89052ce51cd658a6e3155_92a752c854" tabindex="-1" value=""></div>
+								    <div class="clear"><input type="submit" value="Reserve A Free Consultation" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+								    </div>
+								</form>
+								</div>
+								<!--End mc_embed_signup-->
+							</div>
+						</div>
+					</div>
 				</div>
-				</div>
+			</div>
 		</div>
 	</div>
 	<div id="tarpits">
