--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</div>
 							<div class="row fourth-top">
 								<div class="eight columns offset-by-four alpha">
-									<a class="button"><div class="button" id="consult"><div class="circle"><img src="images/me-icon.svg" class="vertical-align"></div> <h5>Get your free consultation</h5></div></a>
+									<a class="button" href="#contact"><div class="button" id="consult"><div class="circle"><img src="images/me-icon.svg" class="vertical-align"></div> <h5>Get your free consultation</h5></div></a>
 								<div class="four columns omega">
 								</div>
 							</div>
@@ -215,10 +215,10 @@
 								<form action="//whoismichaelsuen.us10.list-manage.com/subscribe/post?u=4ece89052ce51cd658a6e3155&amp;id=92a752c854" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 								    <div id="mc_embed_signup_scroll">
 								<div class="mc-field-group">
-									<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name">
+									<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="First Name"><div class="input-validation"></div>
 								</div>
 								<div class="mc-field-group">
-									<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-mail">
+									<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="E-mail"><div class="input-validation"></div>
 								</div>
 									<div id="mce-responses" class="clear">
 										<div class="response" id="mce-error-response" style="display:none"></div>
