Added fade in transitions for main splash

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/layout.css">
 	<link rel="stylesheet" href="css/parallax.css">
-	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" type="text/css" href="//cloud.typography.com/6754892/689804/css/fonts.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
@@ -52,25 +52,25 @@
 		<header class="animated fadeIn">
 			<h1>Michael Suen</h1><h6>Designer. Illustrator. Writer.</h6>
 		</header>
-		<div class="parallax__layer parallax__layer__1">
+		<div class="parallax__layer parallax__layer__1 animated fadeInUp">
 			<img src="images/bg8@2x.png">
 		</div>
-		<div class="parallax__layer parallax__layer__2">
+		<div class="parallax__layer parallax__layer__2 animated fadeInUp">
 			<img src="images/bg7@2x.png">
 		</div>
-		<div class="parallax__layer parallax__layer__3">
+		<div class="parallax__layer parallax__layer__3 animated fadeInUp">
 			<img src="images/bg6@2x.png">
 		</div>
-		<div class="parallax__layer parallax__layer__4">
+		<div class="parallax__layer parallax__layer__4 animated fadeInUp">
 			<img src="images/bg5@2x.png">
 		</div>
-		<div class="parallax__layer parallax__layer__5">
+		<div class="parallax__layer parallax__layer__5 animated fadeInUp">
 			<img src="images/bg4@2x.png">
 		</div>
-		<div class="parallax__layer parallax__layer__6">
+		<div class="parallax__layer parallax__layer__6 animated fadeInUp">
 			<img src="images/bg3@2x.png">
 		</div>
-		<div class="parallax__layer parallax__layer__7">
+		<div class="parallax__layer parallax__layer__7 animated fadeInUp">
 			<img src="images/bg2@2x.png">
 		</div>
 		<div class="parallax__layer parallax__layer__8">
@@ -92,8 +92,8 @@
 							</div>
 							<div class="row">
 								<div class="eight columns offset-by-four omega">
-									<p class="align-left"><strong>I'm a designer, illustrator, and writer.</strong> My <a href="#" class="workplay"><span>work</span></a> emphasizes user-friendly experiences that blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. I <a href="#" class="workplay"><span>work</span></a> with startups, small businesses, and creative entrepreneurs to build web products, games, and brands that audiences love to use. </p>
-									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in Wired, NPR, and Voice of America. In my former life, I helped produce award-winning games and game-based learning initiatives at the MIT spin-off &nbsp;<a href="http://www.learninggamesnetwork.org/">Learning Games Network</a>.</p>
+									<p class="align-left"><strong>I'm a designer, illustrator, and writer.</strong> My <a href="#" class="workplay"><span>work</span></a> emphasizes user-friendly interactive experiences that blur the line between <a href="#" class="workplay"><span>work</span></a> and <a href="#" class="playwork"><span>play</span></a>. I <a href="#" class="workplay"><span>work</span></a> with startups, small businesses, and creative entrepreneurs to design playful web products and campaigns that audiences love to use. </p>
+									<p class="align-left">Projects I've <a href="#" class="workedplayed"><span>worked on</span></a> have been featured in Wired, TechCrunch, NPR, Kill Screen, and Voice of America. I've spoken about game-based learning, new media culture, and digital humanities at MIT, Brown University, York University, and Bryn Mawr College. In a former life, I produced games and digital content at the award-winning MIT spin-off &nbsp;<a href="http://www.learninggamesnetwork.org/">Learning Games Network</a>.</p>
 									<p class="align-left">Spawned in the <a href="#tarpits" rel="leanModal">tar pits</a> of L.A., raised by <a href="#capitalist" rel="leanModal">capitalist wolves</a> in Hong Kong, and educated on the <a href="http://en.wikipedia.org/wiki/Middlebury_College" target="_blank">ice planet</a> of Vermont, I now live in Cambridge, MA with my PlayStation 3.</p>
 								</div>
 							</div>
