Fixed fade in to work with parallax

--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
 		<header class="animated fadeIn">
 			<h1>Michael Suen</h1><h6>Designer. Illustrator. Writer.</h6>
 		</header>
-		<div class="parallax__layer parallax__layer__1 animated fadeInUp">
-			<img src="images/bg8@2x.png">
+		<div class="parallax__layer parallax__layer__1">
+			<img src="images/bg8@2x.png" class="animated fadeInUp">
 		</div>
-		<div class="parallax__layer parallax__layer__2 animated fadeInUp">
-			<img src="images/bg7@2x.png">
+		<div class="parallax__layer parallax__layer__2">
+			<img src="images/bg7@2x.png" class="animated fadeInUp">
 		</div>
-		<div class="parallax__layer parallax__layer__3 animated fadeInUp">
-			<img src="images/bg6@2x.png">
+		<div class="parallax__layer parallax__layer__3">
+			<img src="images/bg6@2x.png" class="animated fadeInUp">
 		</div>
-		<div class="parallax__layer parallax__layer__4 animated fadeInUp">
-			<img src="images/bg5@2x.png">
+		<div class="parallax__layer parallax__layer__4">
+			<img src="images/bg5@2x.png" class="animated fadeInUp">
 		</div>
-		<div class="parallax__layer parallax__layer__5 animated fadeInUp">
-			<img src="images/bg4@2x.png">
+		<div class="parallax__layer parallax__layer__5">
+			<img src="images/bg4@2x.png" class="animated fadeInUp">
 		</div>
-		<div class="parallax__layer parallax__layer__6 animated fadeInUp">
-			<img src="images/bg3@2x.png">
+		<div class="parallax__layer parallax__layer__6">
+			<img src="images/bg3@2x.png" class="animated fadeInUp">
 		</div>
-		<div class="parallax__layer parallax__layer__7 animated fadeInUp">
-			<img src="images/bg2@2x.png">
+		<div class="parallax__layer parallax__layer__7">
+			<img src="images/bg2@2x.png" class="animated fadeInUp">
 		</div>
 		<div class="parallax__layer parallax__layer__8">
 			<img src="images/bg1@2x.png">
